<resources>
    <string name="app_name">Переводчик</string>
    <string name="title_settings">Настройки</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_translate">Перевод</string>
    <string name="title_swap_languages">Поменять языки местами</string>
    <string name="text_copied">Результат перевода скопирован в буфер обмена</string>
    <string name="translate_hint">Введите текст</string>
    <string name="tab_history">История</string>
    <string name="tab_favorites">Избранное</string>
    <string name="fav_icon_title">В избранное</string>
    <string name="copy_icon_title">Копировать результат перевода</string>
    <string name="title_delete_history">Удалить историю</string>
    <string name="dialog_delete_history_title">Удалить историю?</string>
    <string name="dialog_delete_favorites_title">Удалить избранное?</string>
    <string name="empty_list">В списке пока ничего нет</string>
    <string name="message_limit">Невозможно получить перевод. Превышено суточное ограничение на объем переведенного текста</string>
    <string name="message_blocked">Невозможно получить перевод. API-ключ заблокирован</string>
    <string name="message_invalid">Невозможно получить перевод. Приложением передан неправильный API-ключ</string>
    <string name="message_other">Невозможно получить перевод. Непредусмотренный ответ сервера</string>
    <string name="message_empty_code">Не получен ответ от сервера. Проверьте подключение к сети.</string>
    <string name="copyright">Переведено сервисом <a href="http://translate.yandex.ru/">«Яндекс.Переводчик»</a></string>
    <string name="used_langs">Недавно использованные</string>
    <string name="all_langs">Все языки</string>
    <string name="settings_about">О программе</string>
    <string name="about">Приложение разработано для проекта Яндекса "Мобилизация". Все переводы осуществлены с помощью сервиса <a href="http://translate.yandex.ru/">«Яндекс.Переводчик»</a></string>
</resources>
