<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/langFrom"
            style="@style/changeLangButton"
            android:gravity="end|center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
                />

        <ImageButton
            android:id="@+id/swapLang"
            style="@style/changeLangButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/title_swap_languages"
            app:srcCompat="@drawable/ic_swap_horiz_white_24dp"/>

        <Button
            android:id="@+id/langTo"
            android:gravity="start|center_vertical"
            style="@style/changeLangButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        style="@style/contentWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/editTextInput"
            style="@style/editTextDefault"
            android:background="@drawable/edit_text_selector"
            android:hint="@string/translate_hint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:id="@+id/resultWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
           android:layout_weight="1"
            android:orientation="horizontal">

            <ScrollView
                android:id="@+id/resultScrollWrapper"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textViewResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:scrollbars="vertical"
                    android:textAlignment="viewStart"

                    />
            </ScrollView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/fav_icon_width"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewFav"
                android:layout_width="@dimen/fav_icon_width"
                android:layout_height="@dimen/fav_icon_height"

                android:background="@android:color/transparent"
                android:contentDescription="@string/fav_icon_title"
                android:padding="@dimen/icon_padding"
                android:scaleType="center"
                android:src="@drawable/ic_favorite_white_24dp"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/copy"
                android:layout_width="@dimen/fav_icon_width"
                android:layout_height="@dimen/fav_icon_height"
                android:padding="@dimen/icon_padding"
                android:background="@android:color/transparent"
                android:contentDescription="@string/copy_icon_title"
                android:scaleType="center"
                android:src="@drawable/ic_content_copy_white_24dp"
                android:visibility="gone"/>

        </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:text="@string/copyright"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>